<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="feet">Feet</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="inches">Inches</string>
</resources>